# quantum-mesh

./: Cargo.toml
design/: changes.txt  implementations-progress.txt  quantum-mesh-blockchain.md  quantum-mesh-setup.md  quantum-mesh-stack.md
src/: genesis.rs  geometry.rs  hyperbolic.rs  lib.rs  main.rs  quantum_crypto.rs  types.rs
tests/: genesis_tests.rs  tests.rs
